--- a/src/view/components/ball.scss
+++ b/src/view/components/ball.scss
@@ -4,6 +4,8 @@
     margin-right: 5px;
     border: 1px solid black;
     float: left;
+    user-select: none;
+    cursor: pointer;
     &.cur{
         background-color: brown;
     }
