--- a/src/view/App.scss
+++ b/src/view/App.scss
@@ -1,14 +1,10 @@
+@import '~antd/dist/antd.css';
 .box{
     width: 100vh;
     img{
         width: 350px;
         height: 280px;
     }
-}
-button{
-    width: 120px;
-    height: 40px;
-    font-size: large;
 }
 .handleBtn{
     background-color: rgb(52, 160, 202);
